--- a/index.ipynb
+++ b/index.ipynb
@@ -104,9 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frien\n",
-    "\n",
-    "ds = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
+    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
    ]
   },
   {
